<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:id="@+id/layout_top_fragment_profile"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/red_main"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblProfile"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/noto_sans_bold"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="Proil Bilgilerim"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/layout_top_fragment_profile"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tbFirstNameFragmentProfile"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:autofillHints=""
            android:background="@drawable/text_box_design"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text"
            android:maxLength="30"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/tbLastNameFragmentProfile"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/text_box_design"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text"
            android:maxLength="30"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/tbEmailFragmentProfile"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/text_box_design"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/tbPhoneFragmentProfile"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/text_box_design"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="numberSigned"
            android:maxLength="11"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="16dp" />

        <LinearLayout
            android:id="@+id/layout_genderFragmentProfile"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_box_design"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:id="@+id/lblGenderFragmentProfile"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/gender"
                android:textSize="16dp" />

            <RadioGroup
                android:id="@+id/rgGenderFragmentProfile"
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginBottom="-5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMaleFragmentProfile"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male"
                    android:textSize="13dp" />

                <RadioButton
                    android:id="@+id/rbFemaleFragmentProfile"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female"
                    android:textSize="13dp" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btnUpdateFragmentProfile"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_gender"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_button_design"
            android:text="Güncelle"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>

</RelativeLayout>